[tool.poetry]
name = "line-bot"
version = "0.1.0"
description = ""
authors = ["Eric2004311 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
line-bot-sdk = "^2.2.1"
gunicorn = "^20.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
